Dev -> Main (#48)
* feat: add authorize.net as possible payment provider  (#28)

* add payment generic module and empty authorize.not implementation

* add authorizenet endpoints

* add authorize.net client implementation and payment provider interface

* add changes in order and customer services to start using the new payment interface and columns

* PR review changes and a few more fixes

* fixes after conflicts merge

* add structs for authorizenet responses

* create order unit tests

* add tests action workflow

* authorizenet client test minor fix

* make different methods for customer payment external fields

* make different repo methods for orders payment fields

* add sequence diagram

* rename migration to be the latest

* fix on Stripe type assertion to pointer to value

* typo on .env.sample file

* remove install git step from test workflow

---------


* feat: add support for tracking_url (#44) (#45)

* feat: add support for updating a customer's mail (#46) (#47)

---------
